Fixed loader on mobile, and text

--- a/css/newIndex.css
+++ b/css/newIndex.css
@@ -102,22 +102,7 @@ footer {
     #myChart {
         height: 90%;
     }
-    #priceOverlayText {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        font-size: 15px;
-        color: black;
-        transform: translate(-50%,-50%);
-        -ms-transform: translate(-50%,-50%);
-        background-color: white;
-        margin-top: 5%;
-        border-radius: 10px;
-        padding: 10%;
-        width: 95%;
-        align-content: center;
-        text-align: center;
-    }
+
     #mobileJumbotronImage {
 
         width: 100%;
@@ -162,25 +147,7 @@ footer {
     #mobileJumbotronImage {
         display: none;
     }
-    #priceOverlayText {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        font-size: 15px;
-        color: black;
-        transform: translate(-50%,-50%);
-        -ms-transform: translate(-50%,-50%);
-        background-color: white;
 
-        padding-left: 3%;
-        padding-right: 3%;
-        padding-top: 2%;
-        padding-bottom: 1%;
-        border-radius: 10px;
-
-        align-content: center;
-        text-align: center;
-    }
     #chart-container {
         width: 60%;
         padding-top: 15%;
@@ -211,6 +178,22 @@ footer {
     font-size: 12px;
     padding-top: 30px;
     color: red;
+}
+#priceOverlayText {
+    position: absolute;
+       top: 50%;
+       left: 50%;
+       font-size: 15px;
+       color: black;
+       transform: translate(-50%,-50%);
+       -ms-transform: translate(-50%,-50%);
+       background-color: white;
+       margin-top: 5%;
+       border-radius: 10px;
+       padding: 10%;
+       width: 80%;
+       align-content: center;
+       text-align: center;
 }
 
 #priceOverlay {
@@ -243,7 +226,7 @@ footer {
 
     margin-left: auto;
     margin-right: auto;
-    display: none;
+
 }
 
 #text{
@@ -298,6 +281,7 @@ footer {
 
 
         padding: 1%;
+        padding-bottom: 10%;
         border-radius: 10px;
 }
 #portfolioName {
@@ -312,7 +296,8 @@ footer {
     bottom: 0%;
 
     padding: 1%;
-    padding-bottom:  2%;
+    padding-bottom:  10%;
+    margin-bottom: 10%;
 
     border-radius: 10px;
 }
@@ -324,7 +309,10 @@ footer {
     font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 #gifLoader {
-    height: 100%;
+    padding-top: 5%;
+    position: absolute;
+    right: 50;
+    bottom: 50;
 }
 
 #priceText {
